fix z-index sidebar issue

--- a/src/theme.sass
+++ b/src/theme.sass
@@ -1,3 +1,12 @@
+$z-index-offset: 1500
+
+$z-index-highest: 300 + $z-index-offset !default
+$z-index-higher: 200 + $z-index-offset !default
+$z-index-high: 100 + $z-index-offset !default
+$z-index-normal: 1 + $z-index-offset !default
+$z-index-low: -100 + $z-index-offset !default
+$z-index-lower: -200 + $z-index-offset !default
+
 @import "~react-toolbox/lib/_colors.scss"
 @import "~react-toolbox/lib/_globals.scss"
 @import "~react-toolbox/lib/_mixins.scss"
